--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Product/Details.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Product/Details.cshtml
@@ -135,7 +135,7 @@
                                                     {
                                                         <li>
                                                             <div class="media">
-                                                                <img src="@item.UserProfilePic" alt="">
+                                                                <img width="50" class="rounded-circle" src="@item.UserProfilePic" alt="">
                                                                 <div class="media-body">
                                                                     <h6>@item.Username <span>@item.CreatedDate</span></h6>
                                                                     <p>
