--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Shared/_LayoutBase.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Shared/_LayoutBase.cshtml
@@ -599,6 +599,7 @@
                                 </div>
                                 <div class="footer-contant">
                                     <ul>
+                                        <li><a asp-action="Fees" asp-controller="Home">Komisyon Oranları</a></li>
                                         <li><a href="#">Sipariş & İade</a></li>
                                         <li><a href="#">Güvenli ALışveriş</a></li>
                                         <li><a href="#">İletişim</a></li>
