--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Product/Create.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Product/Create.cshtml
@@ -105,7 +105,7 @@
                         </div>
 
                         <div class="text-center col-md-12">
-                            <input type="submit" value="Kaydet" class="btn btn-primary" />
+                            <input type="submit" value="Kaydet" class="btn btn-solid" />
                             <div class="mt-3">
                                 <a asp-controller="Account" asp-action="Index" class="btn btn-secondary">Geri Dön</a>
                             </div>
