--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Product/Edit.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Product/Edit.cshtml
@@ -72,6 +72,14 @@
                             <option>Kullanılmış</option>
                         </select>
                         <span asp-validation-for="Condition" class="text-danger"></span>
+                        <div class="form-group">
+                            <label asp-for="IsBoosted" class="control-label">Yalnızca +%1 Komisyon Karşılığında</label>
+                            <select class="form-control" asp-for="IsBoosted">
+                                <option value="">Ürününü hızlı satmak mı?</option>
+                                <option value="true">Evet</option>
+                                <option value="false">Hayır</option>
+                            </select>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="headerImage" class="control-label">Kapak Fotoğrafı</label>
